<resources>
    <string name="app_name">MyClothes</string>
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_upload_item">Upload Item</string>
    <string name="open_nav_drawer">Open Navigation Drawer</string>
    <string name="close_nav_drawer">Close Navigation Drawer</string>

    <string-array name="sizes">
        <item>Extra Small (XS)</item>
        <item>Small (S)</item>
        <item>Medium (M)</item>
        <item>Large (L)</item>
        <item>Extra Large (XL)</item>
        <item>Other</item>
    </string-array>

    <string-array name="giveTo">
        <item>Charities</item>
        <item>Individuals</item>
    </string-array>

    <string-array name="categories">
        <item>Jackets</item>
        <item>T-Shirts/Blouses</item>
        <item>Trousers</item>
        <item>Skirts</item>
        <item>Dresses</item>
        <item>Shorts</item>
        <item>Sportswear</item>
        <item>Accessories</item>
    </string-array>

    <string-array name="account">
        <item>Individual</item>
        <item>Charity</item>
    </string-array>
    <string name="title_activity_chat_with_pesron">ChatWithPesronActivity</string>
    <string name="type_a_message">Type a message</string>
    <string name="description">Description:</string>
    <string name="uploaded_by">Uploaded by:</string>
    <string name="size">Size:</string>
    <string name="send_message_to_the_owner_here">Send message to the owner here:</string>
    <string name="todo">TODO</string>
    <string name="create_an_account">Create an Account</string>
    <string name="wardrobe_with_a_purpose">Wardrobe with a Purpose</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_account_type">Select account type</string>
    <string name="full_name_organization_name">Full Name/Organization Name</string>
    <string name="go_back">Go Back</string>
    <string name="no_chats_yet">No chats yet.</string>
    <string name="no_uploads_yet">No uploads yet.</string>
    <string name="ok">OK</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="current_password">Current Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="new_password">New Password</string>
    <string name="give_to">Give To</string>
    <string name="post_description">Post Description</string>
    <string name="category">Category</string>
    <string name="post_title">Post Title</string>
    <string name="price">Price</string>
    <string name="save">Save</string>
    <string name="second_image">Second image</string>
    <string name="first_image">First image</string>
    <string name="add_second_image">Add second image</string>
    <string name="add_first_image">Add first image</string>
</resources>

