<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:shownIn = "navigation_view">

    <group
        android:checkableBehavior="single"> <!--you can click one button at a time-->
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/menu_settings" />
    </group>

    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_chat"
                android:icon="@drawable/chat"
                android:title="@string/menu_chat" />

            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>