<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:indeterminateTint="#555151"/>

    <Button
        android:id="@+id/deleteAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_account"
        android:textColor="@color/white"
        android:backgroundTint="@color/bordo"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"/>

    <Button
        android:id="@+id/changePasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:backgroundTint="@color/bordo"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:layout_below="@id/deleteAccountButton"
        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:id="@+id/textLayout"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/currentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="420dp"
            android:layout_marginEnd="28dp"
            android:hint="@string/current_password"
            android:maxLines="1"
            android:textColorHint="#111010"
            app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/currentPasswordText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="15"
            android:inputType="textPassword"
            android:textSize="22sp"
            android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="520dp"
            android:layout_marginEnd="28dp"
            android:hint="@string/new_password"
            android:maxLines="1"
            android:textColorHint="#111010"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newPasswordText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="15"
                android:inputType="textPassword"
                android:textSize="22sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="620dp"
            android:layout_marginEnd="28dp"
            android:hint="@string/confirm_new_password"
            android:maxLines="1"
            android:textColorHint="#111010"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmNewPasswordText"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:ems="15"
                android:inputType="textPassword"
                android:textSize="22sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/OKButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="690dp"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:backgroundTint="@color/bordo"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>
</RelativeLayout>
