<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient"
        tools:context=".menu.ItemActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewItem"
            android:layout_width="0dp"
            android:layout_height="550dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/dots_tab"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="bottom"
            app:tabBackground="@drawable/tab_selector"
            app:tabGravity="center"
            android:background="#00000000"
            app:tabIndicatorHeight="0dp"
            app:layout_constraintTop_toBottomOf="@id/cardViewItem">

            <com.google.android.material.tabs.TabItem
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="48dp"
                android:layout_height="wrap_content" />
        </com.google.android.material.tabs.TabLayout>

        <LinearLayout
            android:id="@+id/title_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/cardViewItem"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:id="@+id/heading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="26sp"
                style="@style/textStyle"
                android:layout_marginEnd="20dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/price"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:textColor="#4A4848"
                android:textSize="26sp"
                style="@style/textStyle"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:background="@color/bordo"
            app:layout_constraintTop_toBottomOf="@+id/title_layout"/>

        <LinearLayout
            android:id="@+id/size_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/title_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:id="@+id/size_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:drawablePadding="8dp"
                android:text="@string/size"
                android:textColor="#323030"
                style="@style/textStyle"
                app:drawableStartCompat="@drawable/mytag" />

            <TextView
                android:id="@+id/size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#323030"
                android:textSize="24sp"
                style="@style/textStyle" />

        </LinearLayout>

        <TextView
            android:id="@+id/description_heading"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:drawablePadding="8dp"
            android:text="@string/description"
            android:textColor="#323030"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/size_layout"
            app:drawableLeftCompat="@drawable/clothehanger" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#323030"
            android:textSize="24sp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="10dp"
            style="@style/textStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_heading" />

        <LinearLayout
            android:id="@+id/userUploaded_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:id="@+id/userUploaded_heading"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:text="@string/uploaded_by"
                android:textColor="#323030"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description"
                app:drawableStartCompat="@drawable/user" />

            <TextView
                android:id="@+id/userUploaded"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textColor="#323030"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userUploaded_heading" />

        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:background="@color/bordo"
            app:layout_constraintTop_toBottomOf="@+id/userUploaded_layout"/>

        <LinearLayout
            android:id="@+id/sendMessage_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/sendMessage_heading"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_message_to_the_owner_here"
                android:textColor="#323030"
                android:textSize="20sp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <ImageView
                android:id="@+id/inbox"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="2dp"
                android:src="@drawable/move_to_inbox"
                android:contentDescription="@string/todo" />
        </LinearLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>